GNOME Bugzilla – Bug 605631
Type of Bluetooth device isn't translated in Preferences dialog
Last modified: 2010-01-01 12:47:37 UTC
Strings from bluetooth_type_to_string() are included in .po files but aren't translated at runtime because the N_() macro is used. Attached patch replaces N_() with _() in bluetooth_type_to_string().
Created attachment 150510 [details] [review] Replace N_() with _()