Make bluetooth_type_to_string() return a translated string

Use the _() macro which calls gettext() instead of the N_() macro that only
marks strings as translatable.

https://bugzilla.gnome.org/show_bug.cgi?id=605631